--- a/piscine_C++/.vscode/settings.json
+++ b/piscine_C++/.vscode/settings.json
@@ -10,6 +10,9 @@
         "string": "cpp",
         "system_error": "cpp",
         "__nullptr": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__functional_03": "cpp",
+        "functional": "cpp",
+        "iostream": "cpp"
     }
 }
