--- a/piscine_C++/.vscode/settings.json
+++ b/piscine_C++/.vscode/settings.json
@@ -13,6 +13,7 @@
         "algorithm": "cpp",
         "__functional_03": "cpp",
         "functional": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ios": "cpp"
     }
 }
