--- a/piscine_C++/.vscode/settings.json
+++ b/piscine_C++/.vscode/settings.json
@@ -14,6 +14,15 @@
         "__functional_03": "cpp",
         "functional": "cpp",
         "iostream": "cpp",
-        "ios": "cpp"
-    }
+        "ios": "cpp",
+        "__bit_reference": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "string_view": "cpp",
+        "vector": "cpp"
+    },
+    "C_Cpp.dimInactiveRegions": true
 }
