--- a/piscine_C++/.vscode/launch.json
+++ b/piscine_C++/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(lldb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/d04/ex02/a.out",
-            "args": ["-l", "-a"],
+            "program": "${workspaceFolder}/d04/ex03/a.out",
+            "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
