--- a/piscine_C++/.vscode/settings.json
+++ b/piscine_C++/.vscode/settings.json
@@ -22,7 +22,9 @@
         "map": "cpp",
         "memory": "cpp",
         "string_view": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp"
     },
     "C_Cpp.dimInactiveRegions": true
 }
